--- a/data/styles.css
+++ b/data/styles.css
@@ -80,3 +80,17 @@
   color:#000000;
   text-align:left;
 }
+.text_area {
+  color:#000000;
+  text-align:left;
+}
+.list_box {
+  color:#000000;
+  text-align:left;
+}
+.link_button {
+  color:#169BD5;
+}
+.checkbox {
+  text-align:left;
+}
