--- a/files/app版式设计图/styles.css
+++ b/files/app版式设计图/styles.css
@@ -3,7 +3,7 @@
   background-image:none;
   position:static;
   left:auto;
-  width:1855px;
+  width:1863px;
   margin-left:0;
   margin-right:0;
   text-align:left;
@@ -21498,6 +21498,780 @@
   left:0px;
   top:0px;
   width:0px;
+  visibility:hidden;
+  word-wrap:break-word;
+}
+#u751 {
+  border-width:0px;
+  position:absolute;
+  left:101px;
+  top:576px;
+  width:0px;
+  height:0px;
+}
+#u751_seg0 {
+  border-width:0px;
+  position:absolute;
+  left:-4px;
+  top:0px;
+  width:8px;
+  height:98px;
+}
+#u751_seg1 {
+  border-width:0px;
+  position:absolute;
+  left:-4px;
+  top:90px;
+  width:458px;
+  height:8px;
+}
+#u751_seg2 {
+  border-width:0px;
+  position:absolute;
+  left:446px;
+  top:79px;
+  width:8px;
+  height:19px;
+}
+#u751_seg3 {
+  border-width:0px;
+  position:absolute;
+  left:440px;
+  top:74px;
+  width:20px;
+  height:20px;
+}
+#u751_text {
+  border-width:0px;
+  position:absolute;
+  left:136px;
+  top:86px;
+  width:100px;
+  visibility:hidden;
+  word-wrap:break-word;
+}
+#u752 {
+  border-width:0px;
+  position:absolute;
+  left:161px;
+  top:567px;
+  width:0px;
+  height:0px;
+}
+#u752_seg0 {
+  border-width:0px;
+  position:absolute;
+  left:-4px;
+  top:-11px;
+  width:8px;
+  height:11px;
+}
+#u752_seg1 {
+  border-width:0px;
+  position:absolute;
+  left:-5px;
+  top:-11px;
+  width:9px;
+  height:8px;
+}
+#u752_seg2 {
+  border-width:0px;
+  position:absolute;
+  left:-5px;
+  top:-11px;
+  width:8px;
+  height:118px;
+}
+#u752_seg3 {
+  border-width:0px;
+  position:absolute;
+  left:-5px;
+  top:99px;
+  width:783px;
+  height:8px;
+}
+#u752_seg4 {
+  border-width:0px;
+  position:absolute;
+  left:770px;
+  top:77px;
+  width:8px;
+  height:30px;
+}
+#u752_seg5 {
+  border-width:0px;
+  position:absolute;
+  left:764px;
+  top:72px;
+  width:20px;
+  height:20px;
+}
+#u752_text {
+  border-width:0px;
+  position:absolute;
+  left:290px;
+  top:95px;
+  width:100px;
+  visibility:hidden;
+  word-wrap:break-word;
+}
+#u753 {
+  border-width:0px;
+  position:absolute;
+  left:223px;
+  top:576px;
+  width:0px;
+  height:0px;
+}
+#u753_seg0 {
+  border-width:0px;
+  position:absolute;
+  left:-4px;
+  top:0px;
+  width:8px;
+  height:98px;
+}
+#u753_seg1 {
+  border-width:0px;
+  position:absolute;
+  left:-4px;
+  top:90px;
+  width:1094px;
+  height:8px;
+}
+#u753_seg2 {
+  border-width:0px;
+  position:absolute;
+  left:1082px;
+  top:79px;
+  width:8px;
+  height:19px;
+}
+#u753_seg3 {
+  border-width:0px;
+  position:absolute;
+  left:1076px;
+  top:74px;
+  width:20px;
+  height:20px;
+}
+#u753_text {
+  border-width:0px;
+  position:absolute;
+  left:454px;
+  top:86px;
+  width:100px;
+  visibility:hidden;
+  word-wrap:break-word;
+}
+#u754 {
+  border-width:0px;
+  position:absolute;
+  left:281px;
+  top:576px;
+  width:0px;
+  height:0px;
+}
+#u754_seg0 {
+  border-width:0px;
+  position:absolute;
+  left:-4px;
+  top:0px;
+  width:8px;
+  height:98px;
+}
+#u754_seg1 {
+  border-width:0px;
+  position:absolute;
+  left:-4px;
+  top:90px;
+  width:1409px;
+  height:8px;
+}
+#u754_seg2 {
+  border-width:0px;
+  position:absolute;
+  left:1397px;
+  top:59px;
+  width:8px;
+  height:39px;
+}
+#u754_seg3 {
+  border-width:0px;
+  position:absolute;
+  left:1391px;
+  top:54px;
+  width:20px;
+  height:20px;
+}
+#u754_text {
+  border-width:0px;
+  position:absolute;
+  left:621px;
+  top:86px;
+  width:100px;
+  visibility:hidden;
+  word-wrap:break-word;
+}
+#u755 {
+  border-width:0px;
+  position:absolute;
+  left:237px;
+  top:267px;
+  width:0px;
+  height:0px;
+}
+#u755_seg0 {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:-4px;
+  width:177px;
+  height:8px;
+}
+#u755_seg1 {
+  border-width:0px;
+  position:absolute;
+  left:158px;
+  top:-10px;
+  width:20px;
+  height:20px;
+}
+#u755_text {
+  border-width:0px;
+  position:absolute;
+  left:36px;
+  top:-8px;
+  width:100px;
+  visibility:hidden;
+  word-wrap:break-word;
+}
+#u756 {
+  border-width:0px;
+  position:absolute;
+  left:97px;
+  top:291px;
+  width:0px;
+  height:0px;
+}
+#u756_seg0 {
+  border-width:0px;
+  position:absolute;
+  left:-4px;
+  top:0px;
+  width:8px;
+  height:493px;
+}
+#u756_seg1 {
+  border-width:0px;
+  position:absolute;
+  left:-4px;
+  top:485px;
+  width:74px;
+  height:8px;
+}
+#u756_seg2 {
+  border-width:0px;
+  position:absolute;
+  left:62px;
+  top:485px;
+  width:8px;
+  height:16px;
+}
+#u756_seg3 {
+  border-width:0px;
+  position:absolute;
+  left:56px;
+  top:486px;
+  width:20px;
+  height:20px;
+}
+#u756_text {
+  border-width:0px;
+  position:absolute;
+  left:-50px;
+  top:276px;
+  width:100px;
+  visibility:hidden;
+  word-wrap:break-word;
+}
+#u757 {
+  border-width:0px;
+  position:absolute;
+  left:160px;
+  top:296px;
+  width:0px;
+  height:0px;
+}
+#u757_seg0 {
+  border-width:0px;
+  position:absolute;
+  left:-4px;
+  top:0px;
+  width:8px;
+  height:459px;
+}
+#u757_seg1 {
+  border-width:0px;
+  position:absolute;
+  left:-4px;
+  top:451px;
+  width:399px;
+  height:8px;
+}
+#u757_seg2 {
+  border-width:0px;
+  position:absolute;
+  left:387px;
+  top:451px;
+  width:8px;
+  height:45px;
+}
+#u757_seg3 {
+  border-width:0px;
+  position:absolute;
+  left:381px;
+  top:481px;
+  width:20px;
+  height:20px;
+}
+#u757_text {
+  border-width:0px;
+  position:absolute;
+  left:-50px;
+  top:436px;
+  width:100px;
+  visibility:hidden;
+  word-wrap:break-word;
+}
+#u758 {
+  border-width:0px;
+  position:absolute;
+  left:277px;
+  top:296px;
+  width:0px;
+  height:0px;
+}
+#u758_seg0 {
+  border-width:0px;
+  position:absolute;
+  left:-4px;
+  top:0px;
+  width:8px;
+  height:14px;
+}
+#u758_seg1 {
+  border-width:0px;
+  position:absolute;
+  left:-4px;
+  top:6px;
+  width:75px;
+  height:8px;
+}
+#u758_seg2 {
+  border-width:0px;
+  position:absolute;
+  left:63px;
+  top:6px;
+  width:8px;
+  height:482px;
+}
+#u758_seg3 {
+  border-width:0px;
+  position:absolute;
+  left:63px;
+  top:480px;
+  width:595px;
+  height:8px;
+}
+#u758_seg4 {
+  border-width:0px;
+  position:absolute;
+  left:650px;
+  top:480px;
+  width:8px;
+  height:15px;
+}
+#u758_seg5 {
+  border-width:0px;
+  position:absolute;
+  left:644px;
+  top:480px;
+  width:20px;
+  height:20px;
+}
+#u758_text {
+  border-width:0px;
+  position:absolute;
+  left:40px;
+  top:476px;
+  width:100px;
+  visibility:hidden;
+  word-wrap:break-word;
+}
+#u759 {
+  border-width:0px;
+  position:absolute;
+  left:692px;
+  top:220px;
+  width:0px;
+  height:0px;
+}
+#u759_seg0 {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:-4px;
+  width:72px;
+  height:8px;
+}
+#u759_seg1 {
+  border-width:0px;
+  position:absolute;
+  left:64px;
+  top:-4px;
+  width:8px;
+  height:526px;
+}
+#u759_seg2 {
+  border-width:0px;
+  position:absolute;
+  left:64px;
+  top:514px;
+  width:550px;
+  height:8px;
+}
+#u759_seg3 {
+  border-width:0px;
+  position:absolute;
+  left:606px;
+  top:514px;
+  width:8px;
+  height:57px;
+}
+#u759_seg4 {
+  border-width:0px;
+  position:absolute;
+  left:600px;
+  top:555px;
+  width:20px;
+  height:20px;
+}
+#u759_text {
+  border-width:0px;
+  position:absolute;
+  left:22px;
+  top:510px;
+  width:100px;
+  visibility:hidden;
+  word-wrap:break-word;
+}
+#u760 {
+  border-width:0px;
+  position:absolute;
+  left:1435px;
+  top:1230px;
+  width:0px;
+  height:0px;
+}
+#u760_seg0 {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:-4px;
+  width:108px;
+  height:8px;
+}
+#u760_seg1 {
+  border-width:0px;
+  position:absolute;
+  left:89px;
+  top:-10px;
+  width:20px;
+  height:20px;
+}
+#u760_text {
+  border-width:0px;
+  position:absolute;
+  left:2px;
+  top:-8px;
+  width:100px;
+  visibility:hidden;
+  word-wrap:break-word;
+}
+#u761 {
+  border-width:0px;
+  position:absolute;
+  left:1560px;
+  top:232px;
+  width:0px;
+  height:0px;
+}
+#u761_seg0 {
+  border-width:0px;
+  position:absolute;
+  left:-4px;
+  top:0px;
+  width:8px;
+  height:22px;
+}
+#u761_seg1 {
+  border-width:0px;
+  position:absolute;
+  left:-84px;
+  top:14px;
+  width:88px;
+  height:8px;
+}
+#u761_seg2 {
+  border-width:0px;
+  position:absolute;
+  left:-84px;
+  top:14px;
+  width:8px;
+  height:1308px;
+}
+#u761_seg3 {
+  border-width:0px;
+  position:absolute;
+  left:-1013px;
+  top:1314px;
+  width:937px;
+  height:8px;
+}
+#u761_seg4 {
+  border-width:0px;
+  position:absolute;
+  left:-1013px;
+  top:1314px;
+  width:8px;
+  height:20px;
+}
+#u761_seg5 {
+  border-width:0px;
+  position:absolute;
+  left:-1019px;
+  top:1319px;
+  width:20px;
+  height:20px;
+}
+#u761_text {
+  border-width:0px;
+  position:absolute;
+  left:-130px;
+  top:1084px;
+  width:100px;
+  visibility:hidden;
+  word-wrap:break-word;
+}
+#u762 {
+  border-width:0px;
+  position:absolute;
+  left:1597px;
+  top:232px;
+  width:0px;
+  height:0px;
+}
+#u762_seg0 {
+  border-width:0px;
+  position:absolute;
+  left:-4px;
+  top:0px;
+  width:8px;
+  height:22px;
+}
+#u762_seg1 {
+  border-width:0px;
+  position:absolute;
+  left:-121px;
+  top:14px;
+  width:125px;
+  height:8px;
+}
+#u762_seg2 {
+  border-width:0px;
+  position:absolute;
+  left:-121px;
+  top:14px;
+  width:8px;
+  height:1294px;
+}
+#u762_seg3 {
+  border-width:0px;
+  position:absolute;
+  left:-662px;
+  top:1300px;
+  width:549px;
+  height:8px;
+}
+#u762_seg4 {
+  border-width:0px;
+  position:absolute;
+  left:-662px;
+  top:1300px;
+  width:8px;
+  height:34px;
+}
+#u762_seg5 {
+  border-width:0px;
+  position:absolute;
+  left:-668px;
+  top:1319px;
+  width:20px;
+  height:20px;
+}
+#u762_text {
+  border-width:0px;
+  position:absolute;
+  left:-167px;
+  top:871px;
+  width:100px;
+  visibility:hidden;
+  word-wrap:break-word;
+}
+#u763 {
+  border-width:0px;
+  position:absolute;
+  left:1717px;
+  top:245px;
+  width:0px;
+  height:0px;
+}
+#u763_seg0 {
+  border-width:0px;
+  position:absolute;
+  left:-4px;
+  top:0px;
+  width:8px;
+  height:9px;
+}
+#u763_seg1 {
+  border-width:0px;
+  position:absolute;
+  left:-241px;
+  top:1px;
+  width:245px;
+  height:8px;
+}
+#u763_seg2 {
+  border-width:0px;
+  position:absolute;
+  left:-241px;
+  top:1px;
+  width:8px;
+  height:1279px;
+}
+#u763_seg3 {
+  border-width:0px;
+  position:absolute;
+  left:-402px;
+  top:1272px;
+  width:169px;
+  height:8px;
+}
+#u763_seg4 {
+  border-width:0px;
+  position:absolute;
+  left:-402px;
+  top:1272px;
+  width:8px;
+  height:49px;
+}
+#u763_seg5 {
+  border-width:0px;
+  position:absolute;
+  left:-408px;
+  top:1306px;
+  width:20px;
+  height:20px;
+}
+#u763_text {
+  border-width:0px;
+  position:absolute;
+  left:-287px;
+  top:614px;
+  width:100px;
+  visibility:hidden;
+  word-wrap:break-word;
+}
+#u764 {
+  border-width:0px;
+  position:absolute;
+  left:1781px;
+  top:245px;
+  width:0px;
+  height:0px;
+}
+#u764_seg0 {
+  border-width:0px;
+  position:absolute;
+  left:-4px;
+  top:0px;
+  width:8px;
+  height:9px;
+}
+#u764_seg1 {
+  border-width:0px;
+  position:absolute;
+  left:-4px;
+  top:1px;
+  width:17px;
+  height:8px;
+}
+#u764_seg2 {
+  border-width:0px;
+  position:absolute;
+  left:5px;
+  top:-9px;
+  width:8px;
+  height:18px;
+}
+#u764_seg3 {
+  border-width:0px;
+  position:absolute;
+  left:5px;
+  top:-9px;
+  width:78px;
+  height:8px;
+}
+#u764_seg4 {
+  border-width:0px;
+  position:absolute;
+  left:75px;
+  top:-9px;
+  width:8px;
+  height:1318px;
+}
+#u764_seg5 {
+  border-width:0px;
+  position:absolute;
+  left:-92px;
+  top:1301px;
+  width:175px;
+  height:8px;
+}
+#u764_seg6 {
+  border-width:0px;
+  position:absolute;
+  left:-92px;
+  top:1301px;
+  width:8px;
+  height:20px;
+}
+#u764_seg7 {
+  border-width:0px;
+  position:absolute;
+  left:-98px;
+  top:1306px;
+  width:20px;
+  height:20px;
+}
+#u764_text {
+  border-width:0px;
+  position:absolute;
+  left:29px;
+  top:686px;
+  width:100px;
   visibility:hidden;
   word-wrap:break-word;
 }
