--- a/files/app版式设计图/styles.css
+++ b/files/app版式设计图/styles.css
@@ -22275,3 +22275,68 @@
   visibility:hidden;
   word-wrap:break-word;
 }
+#u765 {
+  border-width:0px;
+  position:absolute;
+  left:1207px;
+  top:230px;
+  width:0px;
+  height:0px;
+}
+#u765_seg0 {
+  border-width:0px;
+  position:absolute;
+  left:-4px;
+  top:0px;
+  width:8px;
+  height:14px;
+}
+#u765_seg1 {
+  border-width:0px;
+  position:absolute;
+  left:-91px;
+  top:6px;
+  width:95px;
+  height:8px;
+}
+#u765_seg2 {
+  border-width:0px;
+  position:absolute;
+  left:-91px;
+  top:6px;
+  width:8px;
+  height:2008px;
+}
+#u765_seg3 {
+  border-width:0px;
+  position:absolute;
+  left:-1048px;
+  top:2006px;
+  width:965px;
+  height:8px;
+}
+#u765_seg4 {
+  border-width:0px;
+  position:absolute;
+  left:-1048px;
+  top:1991px;
+  width:8px;
+  height:23px;
+}
+#u765_seg5 {
+  border-width:0px;
+  position:absolute;
+  left:-1054px;
+  top:1986px;
+  width:20px;
+  height:20px;
+}
+#u765_text {
+  border-width:0px;
+  position:absolute;
+  left:-137px;
+  top:1442px;
+  width:100px;
+  visibility:hidden;
+  word-wrap:break-word;
+}
